--- a/simulator/styles.css
+++ b/simulator/styles.css
@@ -1,110 +1,189 @@
-:root{
-    --bg-color-primary: #002033;
-    --bg-color-secondary: #002538;
-    --title-color: #D1F949;
-    --text-color: #FFFFFF;
+:root {
+  --bg-color-primary: #002033;
+  --bg-color-secondary: #002538;
+  --title-color: #d1f949;
+  --text-color: #ffffff;
 }
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 body {
-    font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .step-wizard {
-    background-color: var(--bg-color-primary);
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: var(--bg-color-primary);
+  height: 150vh;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 10px;
 }
-.step-wizard-container{
-    background: var(--bg-color-secondary);
-    box-shadow: 0 15px 25px rgba(0,0,0,0.1);
-    color: #333;
-    list-style-type: none;
-    border-radius: 10px;
-    padding: 20px 10px 90px 20px;
-    margin-left: 10%;
-    margin-right: 10%;
-    position: relative;
-    z-index: 10;
+.step-wizard-container {
+  max-height: 550px !important;
+  background: var(--bg-color-secondary);
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+  color: #333;
+  list-style-type: none;
+  border-radius: 10px;
+  padding: 20px 10px 20px 10px;
+  margin-top: 5%;
+  margin-left: 10%;
+  margin-right: 10%;
+  position: relative;
+  z-index: 10;
 }
-.step-wizard-list{
-    display: flex;
+.step-wizard-list {
+  display: flex;
 }
-.step-title-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 200px;
-    margin: 10px 0px 10px 0px;
+.step-title-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  margin: 10px 0px 10px 0px;
 }
-.step-title{
-    color: var(--title-color);
-    font-size: 2em;
-    font-weight: 400;
+.step-title {
+  color: var(--title-color);
+  font-size: 2em;
+  font-weight: 400;
 }
-.step-wizard-item{
-    padding: 0 20px;
-    flex-basis: 0;
-    -webkit-box-flex: 1;
-    -ms-flex-positive:1;
-    flex-grow: 1;
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    min-width: 170px;
-    position: relative;
+.step-wizard-item {
+  padding: 0 20px;
+  flex-basis: 0;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  min-width: 170px;
+  position: relative;
 }
-.step-wizard-item + .step-wizard-item:after{
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 19px;
-    background: var(--text-color);
-    width: 100%;
-    height: 2px;
-    transform: translateX(-50%);
-    z-index: -10;
+.step-wizard-item + .step-wizard-item:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 19px;
+  background: var(--text-color);
+  width: 100%;
+  height: 2px;
+  transform: translateX(-50%);
+  z-index: -10;
 }
-.progress-count{
-    height: 40px;
-    width:40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    border-style: solid;
-    border-color: var(--text-color);
-    background: var(--bg-color-secondary);
-    font-weight: 600;
-    margin: 0 auto;
-    position: relative;
-    z-index:10;
-    color: transparent;
+.progress-count {
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border-style: solid;
+  border-color: var(--text-color);
+  background: var(--bg-color-secondary);
+  font-weight: 600;
+  margin: 0 auto;
+  position: relative;
+  z-index: 10;
+  color: transparent;
 }
-.progress-label{
-    color: var(--title-color);
-    font-size: 14px;
-    font-weight: 600;
-    margin-top: 3em;
+.progress-label {
+  color: var(--title-color);
+  font-size: 14px;
+  font-weight: 600;
+  margin-top: 3em;
 }
-.progress-label-text{
-    color: var(--text-color);
-    font-size: 14px;
-    font-weight: 600;
-    margin-top: 10px;
+.progress-label-text {
+  color: var(--text-color);
+  font-size: 14px;
+  font-weight: 600;
+  margin-top: 10px;
 }
-.img-check{
-    width: 50px;
-    padding-bottom: 1em;
+.img-check {
+  width: 50px;
+  padding-bottom: 1em;
 }
-.img-check-current{
-    width: 60px;
-    padding-bottom: 0.8em;
+.img-check-current {
+  width: 60px;
+  padding-bottom: 0.8em;
+}
+/*Style comments add margin*/
+.comments {
+  width: auto;
+  height: 62%;
+  text-align: center;
+  display: grid;
+  align-items: center;
+}
+
+.comments .comentario {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.comments .comentario p {
+  margin: 0 0 10px 0;
+}
+
+.bubble {
+  position: relative;
+  background-color: #e66e6e;
+  padding: 30px 80px 30px 80px;
+  color: var(--text-color);
+  font-size: 1.5em;
+  font-weight: bold;
+  border-radius: 50px;
+  margin-left: 60px;
+}
+
+.bubble:after {
+  content: "";
+  display: block;
+  position: absolute;
+
+  top: 40%;
+  margin-left: -15px;
+
+  width: 0;
+  height: 0;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+
+  border-right: 15px solid #e66e6e;
+}
+.bubble p {
+    margin-bottom: 1em;
+}
+.loni-contact {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.button {
+  width: 22em;
+  background-color: var(--bg-color-primary); /* Green */
+  border: none;
+  border-radius: 12px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.button2 {
+  background-color: var(--title-color);
+  color: var(--bg-color-primary);
+  margin-top: 1em;
+}
+#container-buttons-contact {
+  display: grid;
+  justify-content: center;
 }
