--- a/dashboards/styles-usuarios.css
+++ b/dashboards/styles-usuarios.css
@@ -11,17 +11,14 @@
 }
 body {
   font-family: 'Lexend Deca', sans-serif;
-  background-color: var(--bg-color-primary);
+  background: var(--bg-color-primary) !important;
 }
 
 .step-wizard {
-  background-color: var(--bg-color-primary);
-  padding-top: 5em;
   height: auto;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 10px;
 }
 .step-wizard-container {
   background: var(--bg-color-secondary);
@@ -29,11 +26,12 @@ body {
   color: #333;
   list-style-type: none;
   border-radius: 10px;
-  padding: 20px 10px 90px 20px;
-  margin-left: 10%;
-  margin-right: 10%;
+  padding: 20px 10px 20px 10px;
   position: relative;
   z-index: 10;
+}
+.step-wizard-list {
+  display: flex;
 }
 .step-title-container {
   display: flex;
@@ -46,43 +44,196 @@ body {
   color: var(--title-color);
   font-size: 2em;
   font-weight: 400;
-  text-align: center;
 }
-.people-img {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 40px;
+.step-wizard-item {
+  padding: 0 20px;
+  flex-basis: 0;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  min-width: 170px;
+  position: relative;
 }
-.circular--square {
-  width: 13em;
-  height: 13em;
+.step-wizard-item + .step-wizard-item:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 19px;
+  background: var(--text-color);
+  width: 100%;
+  height: 2px;
+  transform: translateX(-50%);
+  z-index: -10;
+}
+.progress-count {
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 50%;
-  margin-left: 20px;
+  border-style: solid;
+  border-color: var(--text-color);
+  background: var(--bg-color-secondary);
+  font-weight: 600;
+  margin: 0 auto;
+  position: relative;
+  z-index: 10;
+  color: transparent;
 }
-.container-people-information:last-child {
-  margin-right: 20px;
+.progress-label {
+  color: var(--title-color);
+  font-size: 14px;
+  font-weight: 600;
+  margin-top: 3em;
 }
-.container-people-information {
-  display: inline-grid;
-}
-.container-people-information {
+.progress-label-text {
   color: var(--text-color);
+  font-size: 14px;
+  font-weight: 600;
+  margin-top: 10px;
 }
-.container-people-information:hover {
-  cursor: pointer;
-  color: #e66e6e;
+.img-check {
+  width: 50px;
+  padding-bottom: 1em;
+}
+.img-check-current {
+  width: 60px;
+  padding-bottom: 0.8em;
+}
+/*Style comments add margin*/
+.comments {
+  width: auto;
+  text-align: center;
+  display: grid;
+  align-items: center;
 }
 
+.comments .comentario {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.comments .comentario p {
+  margin: 0 0 10px 0;
+}
+
+.bubble {
+  position: relative;
+  background-color: #e66e6e;
+  padding: 30px 80px 30px 80px;
+  color: var(--text-color);
+  font-size: 1.5em;
+  font-weight: bold;
+  border-radius: 50px;
+  margin-left: 60px;
+}
+
+.bubble:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 40%;
+  margin-left: -49px;
+  width: 0;
+  height: 0;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-right: 50px solid #e66e6e;
+}
+.bubble p {
+    margin-bottom: 1em;
+}
+.loni-contact__img{
+  text-align: center;
+}
+.loni-contact img{
+  width: 50%;
+}
+.button {
+  width: 22em;
+  background-color: var(--bg-color-primary); /* Green */
+  border: none;
+  border-radius: 12px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  margin: 4px 2px;
+  cursor: pointer;
+  transition: all .4s linear;
+}
+.button:hover{
+  transform: scale(1.05);
+}
+.button2 {
+  background-color: var(--title-color);
+  color: var(--bg-color-primary);
+  margin-top: 1em;
+  transition: all .4s linear;
+}
+#container-buttons-contact {
+  display: grid;
+  justify-content: center;
+}
 /*Responsive*/
 @media (max-width: 767.98px) {
-  .step-wizard{
-    height: auto;
-  }
-  .people-img{
+  .step-wizard-list{
     display: block;
   }
-  .container-people-information{
+  .step-wizard-container{
+    margin: 15px;
+  }
+  .loni-contact{
+    display: inline-flex;
+    flex-flow: column-reverse;
+  }
+  .step-wizard-item{
+    position: relative;
     margin-bottom: 2em;
+    text-align: left;
+    padding-left: 4em;
+  }
+  .progress-count{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 30px;
+    height: 30px;
+  }
+  .progress-label{
+    margin: 0;
+  }
+  .step-wizard-item + .step-wizard-item:after{
+    height: 105%;
+    width: 2px;
+    left: 14px;
+    top: -61px;
+  }
+  .button{
+    width: auto;
+  }
+  .bubble{
+    margin: 1em;
+    padding: 2em 1em;
+    height: auto;
+  }
+  .loni-contact img{
+    margin: auto;
+  }
+  .bubble:after{
+    top: auto;
+    bottom: -14px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    transform: rotate(-90deg);
   }
 }
