fix: solve comments in Markup

--- a/dashboards/styles-usuarios.css
+++ b/dashboards/styles-usuarios.css
@@ -191,7 +191,7 @@ body {
   .step-wizard-container{
     margin: 15px;
   }
-  .loni-contact{
+  .loni-contact .row{
     display: inline-flex;
     flex-flow: column-reverse;
   }
